# stats-learn

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  edison_plan.md  journal_notes.md  main.py  main_data.py  matplotlibrc  model_est_v2.py  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  python-package.yml  sphinx-pages.yml  sphinx_pages.yml
Code/Mat/: character_sim_ex.m
Code/Matlab/: N_bar_set_gen.m  beta_multi.m  pmf_DM.m
Code/PGR_thesis/: .gitignore  RE_obj.py  RE_obj_200424.py  RE_obj_callable.py  RP_obj.py  SL_obj.py  TODO.md  __init__.py  _old.py  bayes.py  bayes_models.py  dir_plot.py  learn_functions.py  loss_funcs.py  loss_functions.py  main.py  main_data.py  model_est.py  model_est_v2.py  models.py  old_rv_obj.py  predictors.py  priors.py  random_elements.py  requirements.txt  rv_obj.py  sim_dirichlet.py  test.py  validate_mat.py
Code/Py/: main.py  rv_obj.py  simplex_grid.py  util.py  utilities.py
Code/stats-learn/: .gitignore  requirements.txt
Code/stats_learn/: .gitignore  LICENCE  TODO.md  dir_plot.py  main.py  main_data.py  model_est.py  model_est_v2.py
Documentation/: Dissertation Topic Notes.docx  Topic Notes.md  doro_notes.md
Documentation/Classification Uni Finite/: Classification Uni Finite - GlobalSIP_sub.tex  Classification Uni Finite - Presentation.tex  Classification Uni Finite.tex
Documentation/Density Est Dir/: Density Est Dir - ExtSumm.tex  Density Est Dir - Poster.tex  Density Est Dir - Poster_distro.tex  Density Est Dir.tex
Documentation/Dissertation/: Bayesian ML Theory.tex
Documentation/Journals/: app_notes.md
Documentation/Qualifying Exam/: PhD_refs_QE_presentation.bib  QE Presentation 191205 BIB.tex  QE Presentation.tex  Qualifying Exam.ist  Qualifying Exam.tex
Documentation/References/: PhD_refs.bib  phd_bib.bib
Documentation/Regression Dir Finite/: Regression Dir Finite - SSP_distro.tex  Regression Dir Finite - SSP_v1.tex  Regression Dir Finite - SSP_v2.tex  Regression Dir Finite.tex  presentation_notes.md  regression_dir_finite_presentation.tex
Documentation/Thesis/: Bayesian ML Theory.tex
Documentation/journal/: app_notes.md  disc_notes.md  doro_notes.md  journal_notes.md
Documentation/old/: Bayesian ML Theory 160613.tex  Bayesian ML Theory 190220.tex  Bayesian ML Theory 190221 oldSec.tex  Bayesian ML Theory 190227.tex  Bayesian ML Theory 190306.tex  Bayesian ML Theory 190315.tex  Bayesian ML Theory 190324.tex  Bayesian ML Theory 190328.tex  Bayesian ML Theory 190328_2.tex  Bayesian ML Theory 190329.tex  Bayesian ML Theory 190331.tex  Bayesian ML Theory 190403.tex  Bayesian ML Theory 190404.tex  Bayesian ML Theory 190407 SE.tex  Bayesian ML Theory 190418.tex  Bayesian ML Theory 190418_2.tex  Bayesian ML Theory 190418_3.tex  Bayesian ML Theory 190419.tex  Bayesian ML Theory 190419_2.tex  Bayesian ML Theory 190419_3.tex  Bayesian ML Theory 190421.tex  Bayesian ML Theory 190421_2.tex  Bayesian ML Theory 190421_3.tex  Bayesian ML Theory 190424.tex  Bayesian ML Theory 190424_2.tex  Bayesian ML Theory 190424_3.tex  Bayesian ML Theory 190510.tex  Bayesian ML Theory 190510_2.tex  Bayesian ML Theory 190520.tex  Bayesian ML Theory 190521.tex  Bayesian ML Theory 190528.tex  Bayesian ML Theory 190529.tex  Bayesian ML Theory 190605 notation.tex  Bayesian ML Theory 190612.tex  Bayesian ML Theory 190619.tex  Bayesian ML Theory 190621.tex  Bayesian ML Theory 190626.tex  Bayesian ML Theory 190629.tex  Bayesian ML Theory 190712.tex  Bayesian ML Theory 190825.tex  (+57 more)
Matlab/: N_bar_set.m  Untitled.m  coef_multi.m  dirrnd.m  plot_MC_general_dist.asv
Matlab/Figures/: P_nbar_a0.fig  P_nbar_uni.fig  P_nbar_uni_tilde.fig  P_theta_highVar.fig  P_theta_highVar2.fig  P_theta_limited_obs.fig  P_theta_post.fig  P_theta_post_uni_tilde.fig  P_theta_suff_stat.fig  P_theta_tilde.fig  P_theta_uniform.fig  P_yx_error_N_0.fig  P_yx_error_a0_0_1.fig  P_yx_error_a0_10.fig  Risk_01_Dir_IO_N_leg_Px.fig  Risk_01_Dir_IO_Px_N_10_a0_1.fig  Risk_01_Dir_N_leg_a0_1X.fig  Risk_01_Dir_N_leg_f_mu.fig  Risk_01_Dir_Pyx__a0_high.fig  Risk_01_Dir_Pyx__a0_low.fig  Risk_01_Dir_a0_leg_N.fig  Risk_01_Dir_a0_leg_N_1X.fig  Risk_01_Dir_muTheta_N_1_a0_01.fig  Risk_01_IO_N-Mx.fig  Risk_01_uni_N-Mx.fig  Risk_01_uni_N_bounds.fig  Risk_01_uni_N_leg_My.fig  Risk_SE_Dir_IO_N_leg_a0.fig  Risk_SE_Dir_IO_a0_leg_N.fig  Risk_SE_Dir_alpha0.fig  Risk_SE_Dir_muTheta.fig  Risk_SE_IO_N-Mx.fig  Risk_SE_IO_N.fig  Risk_clv_01.fig  Risk_clv_SE.fig  Risk_clv_SE_tilde.fig  Risk_cond_01_Dir_N_leg_a0__subj_good_1X.fig  Risk_cond_01_Dir_theta_sub_mu.fig  Risk_cond_SE_Dir_N_leg_a0_unbiased.fig  Risk_cond_SE_Dir_N_leg_a0_unbiased_1X.fig  (+13 more)
Matlab/Old Code/: 01_temp.mat  01_temp2.mat  01_temp3.mat  01_temp4.mat  MC_SE_DP.m  MC_basic.m  Untitled3.m  fcn_MC_basic.m  learn_dir_01_basic.m  learn_dir_01_old.m  learn_dir_SE_basic.m  learn_dir_SE_old.m  plot_MC_general_N_alpha0.m  plot_MC_general_cond_191007.m  plot_MC_general_mu_theta.m  plot_sim_risk_cond 191014.m  risk_dir_SE_old.m
Matlab/Plotting/: export_pdf.m  plot_DM.m  plot_Py.m  plot_Py_varMod.m  plot_emp.m  plot_risk_01.m  plot_risk_SE.m  plot_risk_SE_Dir.m  plot_risk_SE_IO.m
Matlab/Research/: N_bar_max.m  N_bar_max_Dir.m  N_bar_max_sub.m  N_bar_stats.m  temp_01_Dir.m
Matlab/Simulation/: fcn_sim_risk.m  learn_dir_01.m  loss_SE.m  sim_risk_prior.m  (+5 more)
_deprecated/: model_est.py  model_est_v2.py
docs/: conf.py  index.rst  usage.rst
examples/: basic.py  discrete_underfitting.py  quickstart.py
images/: ieee.mplstyle  style.mplstyle
logs/: results.md
stats_learn/: __init__.py  data_processing.py  funcs.py  loss_funcs.py  predictors.py  preprocessing.py  results.py  spaces.py  util.py
tests/: pytest.ini  test_bayes_elements.py  test_bayes_models.py  test_expectation.py  test_preprocessing.py  test_rand_elements.py  test_rand_models.py  test_random_elements.py  test_random_models.py
users/: axes_mod.py  dir_plot.py  fig_mod.py  main.py  model_est_analytic.py  mpl_update.py  mpl_update_2.py  style_mod.py  text_mod.py
(+331 files in other folders)
