[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Paul Rademacher", email = "paul.rademacher@nrl.navy.mil" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.3",
  "scipy>=1.8.0",
  "matplotlib>=3.5.2",
  "pandas>=1.4.2",
  "tabulate>=0.8.9",
  "tqdm>=4.64.0",
  "more-itertools>=8.13.0",
  "torch>=1.11.0",
  "pytorch-lightning>=1.6.3",
]
description = "Statistical learning with a Bayesian focus"
name = "stats-learn"
readme = "README.md"
requires-python = ">=3.8, <3.11"
version = "0.1.2a0"

[project.optional-dependencies]
dev = [
  "black>=22.3.0",
  "ruff>=0.0.261",
  "mypy>=1.0.0",
  "hatch>=1.6.3",
  "pytest>=7.1.2",
  "pytest-cov>=4.0.0",
  "Sphinx>=4.5.0",
  "furo>=2023.3.27",
  "ipywidgets>=7.7.0",
  "ipykernel>=6.22.0",
  "PyQt5>=5.15.6",
  "tensorboard>=2.9.1",
  "torch-tb-profiler>=0.4.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/rademacher-p/stats-learn/issues"
"Homepage" = "https://github.com/rademacher-p/stats-learn"

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build]
# ignore-vcs = true
# packages = ["src/stats_learn"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu118"

[tool.ruff]
src = ["src"]
select = [
  "F", # pyflakes
  "E", # pycodestyle
  "W", # pycodestyle
  "C90", # mccabe
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "B", # bugbear
  # "UP", # pyupgrade
]
ignore = ["D1", "B905"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
addopts = ["--cov=src/stats_learn/"]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests/"]

[tool.coverage.run]
data_file = "tests/.coverage"
