[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Paul Rademacher", email = "paul.rademacher@nrl.navy.mil" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.3",
  "scipy>=1.8.0",
  "matplotlib>=3.5.2",
  "pandas>=1.4.2",
  "tabulate>=0.8.9",
  "tqdm>=4.64.0",
  "more-itertools>=8.13.0",
  "torch>=1.11.0",
  "pytorch-lightning>=1.6.3",
]
description = "Statistical learning with a Bayesian focus"
name = "stats-learn"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.2a0"

[project.optional-dependencies]
dev = [
  "ipython",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "hatch",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
extras = [
  "Sphinx",
  "furo",
  "ipykernel",
  "tensorboard",
  "torch-tb-profiler",
  "PyQt6",
  "PyYAML",
  "tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/rademacher-p/stats-learn/issues"
"Homepage" = "https://github.com/rademacher-p/stats-learn"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
ignore-vcs = true
packages = ["src/stats_learn"]

[tool.hatch.envs.default]
python = "3.11"
features = ["extras", "dev"]
post-install-commands = [
  "pre-commit install",
  "mypy --install-types --non-interactive . || true",
]

[tool.black]
extend-exclude = "src/_deprecated"

[tool.ruff]
src = ["src"]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  "C90", # mccabe
  "I",   # isort
  "N",   # pep8-naming
  "D",   # pydocstyle
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = [
  "D1",   # missing docstrings
  "B905", # zip w/o explicit `strict=`
  "C901", # high McCabe complexity # TODO
]
extend-exclude = ["src/_deprecated"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
exclude = ["src/_deprecated"]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["stats_learn.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--cov=src/stats_learn",
  "--cov-report=xml:tests/coverage.xml",
  "--numprocesses=auto",
]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests/"]

[tool.coverage.run]
data_file = "tests/.coverage"
