[metadata]
name = stats-learn
version = 0.0.1
author = Paul Rademacher
author_email = paul.rademacher@nrl.navy.mil
description = Statistical learning with a Bayesian focus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rademacher-p/stats-learn
project_urls =
    Bug Tracker = https://github.com/rademacher-p/stats-learn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
;package_dir =
;    = .
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.22.3
    scipy==1.8.0
    matplotlib==3.5.2
    PyQt5==5.15.6
    pandas==1.4.2
    tabulate==0.8.9
    more-itertools==8.13.0
    torch==1.11.0
    pytorch-lightning==1.6.3
    
;[options.packages.find]
;where = .
;include=stats_learn*
;exclude=stats_learn.tests*

[flake8]
max-line-length = 88
# extend-ignore = E203
# select = C,E,F,W,B,B950
extend-ignore = E203, E501